fix: tabs at bottom on small screen

--- a/src/app/components/recipe/recipe.component.scss
+++ b/src/app/components/recipe/recipe.component.scss
@@ -53,7 +53,3 @@ img {
     margin: 0 0.5rem;
   }
 }
-
-.custom-backdrop {
-  box-shadow: none !important;
-}
