--- a/src/css/scss/_recipe.scss
+++ b/src/css/scss/_recipe.scss
@@ -60,7 +60,7 @@ h2.recipe-title {
 //     overflow-y: hidden;
 // }
 
-.test-tabs {
+.bottom-tabs {
   position: fixed;
   width: 100vw;
   bottom: 0;
